# Event-Hub-Platform

./: .gitignore  README.md
.github/: dependabot.yml
backend/: Cargo.toml
backend/docs/: JIRA.md  MVP-requirements.md
backend/src/: main.rs
